--- a/styles/css/HackneyDS/Button.scss
+++ b/styles/css/HackneyDS/Button.scss
@@ -396,8 +396,9 @@ button:not(.lbh-button--disabled):not([disabled]), a:not(.lbh-button--disabled):
   background: #be3a34;
 }
 
-.large-button{
-  min-width:200px;
+.large-button {
+  height: 50px;
+  min-width: 200px;
 }
 
 @media (min-width: 48.0625em) {
